@@ -635,6 +635,7 @@ int gen_report(seltree* node) {
     send_audit_report();
 #endif
     print_report_header();
+    if(conf->action&(DO_COMPARE|DO_DIFF) || (conf->action&DO_INIT && conf->detailed_init_report) ) {
     if (conf->grouped) {
         if (nadd) {
             error(2,(char*)report_top_format,_("Added entries"));
@@ -661,6 +662,7 @@ int gen_report(seltree* node) {
     if (nadd || nrem || nchg) {
         error(nchg?5:6,(char*)report_top_format,_("Detailed information about changes"));
         print_report_details(node);
+    }
     }
     conf->end_time=time(&(conf->end_time));
     print_report_footer();
