@@ -2,6 +2,7 @@ Version 0.16 (NOT_YET_RELEASED)
 	* Enabled summarize_changes by default
 	* Compare database entries just once
 	* Added new root_prefix option
+	* Added new detailed_init_report option
 	* Wrap attribute values instead of cut them off
 	* Side-by-side output of acl and xattrs values
 	* Use '|' to separate the old value from the new one
@@ -11,8 +12,6 @@ Version 0.16 (NOT_YET_RELEASED)
 	  or higher
 	* Print added and removed attribute values of changed entries in
 	  verbose level 6 or higher
-	* Print list of added files (verbose level >= 2) and their details (verbose
-	  level >= 6) if database has been initialized
 	* Added numeric timezone to time format
 	* Print "End timestamp" message in report
 	* Added run time to report
